# hello-world-python

./: Dockerfile  README.md  app.py  pyproject.toml  report.xml  test_app.py
k8s/: manifest.yaml
