[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-python"
version = "0.1.0"
description = "A simple hello world Python application"
authors = [{name = "Harshita", email = "your.email@example.com"}]
dependencies = []

[project.scripts]
hello-world = "app:main"